2006-05-17  Daniel Stone  <daniel@freedesktop.org>

	* hw/xfree86/dixmods/Makefile.am:
	Make DBE support conditional.  (Enrico Wiegelt)

	* hw/xfree86/loader/xf86sym.c:
	Make Xv symbols conditional.  (Enrico Wiegelt)

2006-05-15  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/os-support/linux/lnx_acpi.c:
	Bug #5209: Fix APM/ACPI support, again. (Michel Dänzer, Valery 
	Inozemtsev)

2006-05-14  Matthieu Herrb <matthieu.herrb@laas.fr>

	* configure.ac:
	Don't use AM_CONDITIONAL inside shell conditionals.
	Bugzilla #6916.

Fri May 12 17:51:26 2006  Søren Sandmann  <sandmann@redhat.com>

	* Xext/sync.c (SyncDeleteTriggerFromCounter): Keep track of the
	previous item and update its next pointer when deleting from the
	linked list.

2006-05-11  Matthias Hopf  <mhopf@suse.de>

	* fb/fbpict.c: (fbComposite):
	Bug #5796: Wrong fastpath selection for repeating sources.

2006-05-11  Matthias Hopf  <mhopf@suse.de>

	* hw/xfree86/xaa/xaaPict.c: (XAAComposite):
	Bug #4320: Improved XAA Composite fastpath.

2006-05-10  Adam Jackson  <ajax@freedesktop.org>

	* record/record.c:
	Bug #3561: Crash fix in the Record extension. (Paul Anderson)

2006-05-09  Adam Jackson  <ajax@freedesktop.org>

	* render/render.c:
	Bug #6867: Yet another Render crash fix. (Michel Dänzer)

2006-05-09  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/common/Makefile.am:
	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/os-support/linux/Makefile.am:
	* hw/xfree86/os-support/linux/lnx_acpi.c:
	* hw/xfree86/os-support/linux/lnx_apm.c:
	Bug #5209: Re-enable building APM and ACPI support. (Michel 
	Dänzer)

2006-05-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	Make Xephyr build on Solaris:
	
	* hw/kdrive/src/kinput.c: 
	Add #include <sys/file.h> on Solaris for FNONBLOCK/FASYNC definitions

	* hw/kdriver/linux/Makefile.am
	Move agp.c & agp.h to KDRIVE_HW_SOURCES since they're not needed